<resources>
    <string name="app_name">Restaurant Reservation App</string>
    <string name="name">Name:</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="no_of_pax">No of Pax:</string>
    <string name="select_the_date">Select the date:</string>
    <string name="select_your_timing">Select your timing:</string>
    <string name="non_smoking_area">non-smoking area</string>
    <string name="smoking_area">smoking area</string>
    <string name="select_table_area">Select table area:</string>
</resources>